# wgraphc

./: Cargo.toml  README.md  graph.js  index.css  index.html  index.js  interface.js  tsconfig.json  webgl.js
pkg/: README.md  graph.js  index.js  metaUI.js  package.json  wasm.js  wgraphcal.d.ts  wgraphcal.js  wgraphcal_bg.wasm  wgraphcal_bg.wasm.d.ts
src/: graph.ts  index.ts  lib.rs  metaUI.ts  wasm.ts
src/graph/: grapher.rs  mod.rs  variables.rs
src/parser/: ast.rs  evaluator.rs  expressions.rs  lexer.rs  mod.rs  scanner.rs  token.rs  tokenizer.rs
src/parser/structs/: abstract_syntax_tree.rs  arity.rs  function.rs  mod.rs  op_vec.rs  operator.rs  token.rs  value.rs
tssrc/: graph.ts  index.ts  metaUI.ts  wasm.ts
