[package]
name = "wgraphcal"
version = "0.1.0"
edition = "2021"
authors = ["Willow Rose <nbash1984@gmail.com>"]


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
fancy-regex = "0.13.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
num-complex = "0.4"
js-sys = "0.3.69"

[features]
default = []
logging = []

[profile.release]
opt-level = 3
