[package]
name = "wgraphcal"
version = "0.1.1"
edition = "2021"
authors = ["Willow Rose <nbash1984@gmail.com>"]
description = "A web-based complex graphing calculator written in JavaScript and Rust using WebAssembly"
repository = "https://github.com/varphi-online/wgraphc"
license = "GPL-3.0-only"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lazy_static = "1.5.0"
num-complex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.9", features = ["derive"] }
serde_json = "1.0.9"
web-sys = { version = "0.3.69", features = [
  "OffscreenCanvasRenderingContext2d",'Window', 'Performance', 'PerformanceTiming'
] }

[features]
default = []
logging = []

[profile.release]
lto = true
opt-level = 3
